--- a/mern-blog-frontend-master-2/package.json
+++ b/mern-blog-frontend-master-2/package.json
@@ -17,6 +17,7 @@
     "easymde": "^2.16.1",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.32.0",
     "react-markdown": "^8.0.3",
