--- a/mern-blog-frontend-master-2/package.json
+++ b/mern-blog-frontend-master-2/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/base": "^1.0.0-beta.4",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@react-oauth/google": "^0.12.1",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^1.1.1",
     "easymde": "^2.16.1",
     "prettier": "^2.6.2",
@@ -25,6 +28,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simplemde-editor": "^5.0.2",
+    "react-tinder-card": "^1.5.4",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
   },
