--- a/mern-blog-frontend-master-2/package.json
+++ b/mern-blog-frontend-master-2/package.json
@@ -6,6 +6,8 @@
     "@cloudinary/base": "^1.0.0-beta.4",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@react-oauth/google": "^0.12.1",
