--- a/mern-blog-frontend-master-2/package.json
+++ b/mern-blog-frontend-master-2/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simplemde-editor": "^5.0.2",
+    "react-swipeable": "^7.0.2",
     "react-tinder-card": "^1.5.4",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
